kubernetes/apps/entertainment/immich/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Entertainment
    gethomepage.dev/name: Immich
    gethomepage.dev/icon: immich.png
    gethomepage.dev/description: Photo and video management
    gethomepage.dev/href: https://immich.${SECRET_DOMAIN}
    gethomepage.dev/widget.type: kubernetes
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=immich
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "immich.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
